--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,20 +16,18 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       
-      # - name: Install Zola
-      #   run: sudo snap install zola --edge
-      
-      # - name: Build the Wesbite
-      #   run: zola build
-      
       - name: Scan the host key
-        run: mdkir -p ~/.ssh/ && ssh-keyscan -H $DEPLOY_SERVER >> ~/.ssh/know_hosts
+        run: mkdir -p ~/.ssh/ && ssh-keyscan -H $DEPLOY_SERVER >> ~/.ssh/know_hosts
         env:
           DEPLOY_SERVER: ${{ secrets.DEPLOY_SERVER }}
       
+      - name: Deploy to website
+        run: |
+          sudo cp -R . /home/user-data/www/nicee-n-tasty
+      
       - name: Deploy the Website
         run: >-
-          rsync -avx --delete nicee-n-tasty/ $DEPLOY_USERNAME@DEPLOY_SERVER://home/user-data/www/nicee-n-tasty
+          rsync -avx --delete nicee-n-tasty/ $DEPLOY_USERNAME@DEPLOY_SERVER:/home/user-data/www/nicee-n-tasty
         env:
           DEPLOY_SERVER: ${{ secrets.DEPLOY_SERVER }}
           DEPLOY_USERNAME: ${{ secrets.DEPLOY_USERNAME }}
