--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           ls -all
           cd /home
-          sudo cp -R . /home/user-data/www/nicee-n-tasty
+          sudo cp -R . /
       
       - name: Deploy the Website
         run: >-
