--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Deploy to website
         run: |
           ls -all
-          cd /home
-          sudo cp -R . /home/user-data/www/nicee-n-tasty/
+          cd /home/user-data/www/nicee-n-tasty/
+          dir
+          sudo cp -Rf . /home/user-data/www/nicee-n-tasty/
       
