--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,14 +17,15 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       
       - name: Scan the host key
-        run: mkdir -p ~/.ssh/ && ssh-keyscan -H $DEPLOY_SERVER >> ~/.ssh/know_hosts
+        run: mkdir -p ~/.ssh/ && ssh-keyscan -H ${{ secrets.DEPLOY_SERVER }} >> ~/.ssh/known_hosts
+
         env:
           DEPLOY_SERVER: ${{ secrets.DEPLOY_SERVER }}
       
       - name: Deploy to website
         run: |
           ls -all
-          cd /home/user-data/www/nicee-n-tasty/
-          dir
-          sudo cp -Rf . /home/user-data/www/nicee-n-tasty/
+          cd /home
+          sudo cp -R . /home/user-data/www/nicee-n-tasty/
       
+
