--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,9 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       
       - name: Scan the host key
-        run: mkdir -p ~/.ssh/ && ssh-keyscan -H ${{ secrets.DEPLOY_SERVER }} >> ~/.ssh/known_hosts
-
+        run: |
+          mkdir -p ~/.ssh/ && ssh-keyscan -H ${{ secrets.DEPLOY_SERVER }} >> ~/.ssh/known_hosts
+          ls -all
         env:
           DEPLOY_SERVER: ${{ secrets.DEPLOY_SERVER }}
       
