--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,16 @@ jobs:
         env:
           DEPLOY_SERVER: ${{ secrets.DEPLOY_SERVER }}
       
-      - name: Deploy to website
-        run: |
-          ls -all
-          cd /home
-          sudo cp -R . /home/user-data/www/nicee-n-tasty/
-      
+      - name: SSH into the server and deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DEPLOY_SERVER }}
+          username: your-ssh-username
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22  # Update the port if your SSH server uses a different port
+          script: |
+            # Add your deployment commands here
+            ls -all
+            cd /home
+            sudo cp -R . /home/user-data/www/nicee-n-tasty/
 
