--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22  # Update the port if your SSH server uses a different port
           script: |
-            echo ${{ secrets.DEPLOY_PASSWORD }} | sudo -S cp -R . /home/user-data/www/nicee-n-tasty/
+            sudo rm -rf /home/user-data/www/nicee-n-tasty/*
+            sudo cp -R $GITHUB_WORKSPACE/. /home/user-data/www/nicee-n-tasty/
+            
 
 
