--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
       - name: checkout the current branch
         uses: actions/checkout@v3
+       # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          mkdir ../build
+          cp -TR . ../build
+          tar -cvf deploy.tar ../build/
       
       - name: SSH into the server and deploy
         uses: appleboy/ssh-action@master
@@ -18,7 +24,9 @@ jobs:
           username: ${{ secrets.DEPLOY_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22  # Update the port if your SSH server uses a different port
-          script: |
-            echo ${{ secrets.DEPLOY_PASSWORD }} | sudo -S cp -Rf ${{ github.workspace }}/. /home/user-data/www/nicee-n-tasty/
+          source: "deploy.tar"
+          target: "/home/user-data/www/nicee-n-tasty"
+          # script: |
+          #   echo ${{ secrets.DEPLOY_PASSWORD }} | sudo -S cp -Rf ${{ github.workspace }}/. /home/user-data/www/nicee-n-tasty/
 
 
