--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
           mkdir ../build
           cp -TR . ../build
           tar -cvf deploy.tar ../build/
+          chmod 777 deploy.tar
       
       - name: SSH into the server and deploy
         uses: appleboy/scp-action@master
