--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
         run: |
           mkdir ../build
           cp -TR . ../build
-          tar -cvf deploy.tar ../build/
-          chmod 777 deploy.tar
+          zip deploy.zip ../build/
+          chmod 777 deploy.zip
       
       - name: SSH into the server and deploy
         uses: appleboy/scp-action@master
@@ -27,7 +27,7 @@ jobs:
           port: 22  # Update the port if your SSH server uses a different port
           script: |
             echo ${{ secrets.DEPLOY_PASSWORD }} | sudo -S
-          source: "deploy.tar"
+          source: "deploy.zip"
           target: "/home/user-data/www/nicee-n-tasty/"
 
 
