--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
           script: |
             echo ${{ secrets.DEPLOY_PASSWORD }} | sudo -S
           source: distfiles/*
-          target: /home/user-data/www/nicee-n-tasty/
+          target: ~/
 
 
